--- a/index.html
+++ b/index.html
@@ -64,30 +64,6 @@
           </tr>
         </thead>
         <tbody>
-          <tr>
-            <td class="description">Luz</td>
-            <td class="expense">- R$ 500,00</td>
-            <td class="date">31/01/2021</td>
-            <td>
-              <img src="./assets/minus.svg" alt="Remover transação">
-            </td>
-          </tr>
-          <tr>
-            <td class="description">Criação de Website</td>
-            <td class="income">R$ 5.000,00</td>
-            <td class="date">24/01/2021</td>
-            <td>
-              <img src="./assets/minus.svg" alt="Remover transação">
-            </td>
-          </tr>
-          <tr>
-            <td class="description">Internet</td>
-            <td class="expense">- R$ 200,00</td>
-            <td class="date">26/01/2021</td>
-            <td>
-              <img src="./assets/minus.svg" alt="Remover transação">
-            </td>
-          </tr>
         </tbody>
       </table>
     </section>
@@ -124,20 +100,8 @@
     <p>2021 - dev.finance$</p>
   </footer>
 
-  <script>
-    const Modal = {
-      open() {
-        //Abrir Modal
-        //Adicionar a class active ao Modal
-        document.querySelector('.modal-overlay').classList.add('active');
-      },
-      close() {
-        //Fechar o Modal
-        //Remover a class active do Modal
-        document.querySelector('.modal-overlay').classList.remove('active');
-      }
-    }
-  </script>
+  <script src="site.js"></script>
+
 </body>
 
 </html>
