--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 <body>
   <header>
     <img src="./assets/logo.svg" alt="Logo Dev Finance">
+    <h1 style="color: white">Aula 03 - 1:07:40</h1>
   </header>
 
   <main class="container">
@@ -29,7 +30,7 @@
           <span>Entradas</span>
           <img class="img-balance" src="./assets/income.svg" alt="Imagem de entradas">
         </h3>
-        <p>R$ 5.000,00</p>
+        <p id="incomesDisplay">R$ 5.000,00</p>
       </div>
 
       <div class="cards">
@@ -37,7 +38,7 @@
           <span>Saídas</span>
           <img class="img-balance" src="./assets/expense.svg" alt="Imagem de saídas">
         </h3>
-        <p>R$ 2.000,00</p>
+        <p id="expensesDisplay">R$ 2.000,00</p>
       </div>
 
       <div class="cards total">
@@ -45,7 +46,7 @@
           Total
           <img class="img-balance" src="./assets/total.svg" alt="Imagem do total">
         </h3>
-        <p>R$ 3.000,00</p>
+        <p id="totalDisplay">R$ 3.000,00</p>
       </div>
     </section>
 
