--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
   <header>
     <img src="./assets/logo.svg" alt="Logo Dev Finance">
-    <h1 style="color: white">Aula 03 - 1:07:40</h1>
+    <h1 style="color: white">Aula 03 - 2:21:21</h1>
   </header>
 
   <main class="container">
@@ -74,7 +74,7 @@
     <div class="modal">
       <div id="form">
         <h2>Nova Transação</h2>
-        <form action="">
+        <form action="" onsubmit="Form.submit(event)">
           <div class="input-group">
             <label class="sr-only" for="description">Descrição</label>
             <input id="description" name="description" class="transaction" type="text" placeholder="Descrição">
@@ -101,7 +101,7 @@
     <p>2021 - dev.finance$</p>
   </footer>
 
-  <script src="site.js"></script>
+  <script src="script.js"></script>
 
 </body>
 
